# ferrokv

./: Cargo.toml  README.md  WHITEPAPER.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: lib.rs
examples/: batch.rs  config.rs  del.rs  incr.rs  no_ttl.rs  scan.rs  ttl.rs
ferrokv-cli/: Cargo.toml  README.md
ferrokv-cli/src/: main.rs
src/: batch.rs  bloom.rs  compaction.rs  config.rs  errors.rs  helpers.rs  lib.rs  memtable.rs  mvcc.rs  sstable.rs  stats.rs  storage.rs  ttl.rs  wal.rs
tests/: lib.rs
