[package]
name = "ferrokv"
version = "1.0.0"
edition = "2024"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
description = "The embedded, async, Redis-inspired key-value store for Rust."
repository = "https://github.com/xosnrdev/ferrokv"
license = "MIT"

[dependencies]
bytes = "1.11.0"
crc32fast = "1.5.0"
crossbeam-skiplist = "0.1.3"
memmap2 = "0.9.9"
mimalloc = { version = "0.1.48", features = ["v3"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }

[dev-dependencies]
tempfile = "3.23.0"
