[package]
name = "ferrokv"
version = "1.0.2"
edition = "2024"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
description = "The embedded, async, Redis-inspired key-value store for Rust."
repository = "https://github.com/xosnrdev/ferrokv"
categories = ["asynchronous", "embedded", "database"]
keywords = ["key-value", "async", "tokio"]
license = "MIT"

[features]
io-uring = ["tokio/io-uring"]

[dependencies]
arc-swap = "1.7.1"
bytes = "1.11.0"
crc32fast = "1.5.0"
crossbeam-skiplist = "0.1.3"
memmap2 = "0.9.9"
mimalloc = { version = "0.1.48", features = ["v3"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio", "html_reports"] }
tempfile = "3.23.0"

[[bench]]
name = "lib"
harness = false
